Fix less issue when sidebar is collapsed
Follow-up to request #13227: Remove unneeded Scrollbar

--- a/www/themes/default/css/style.less
+++ b/www/themes/default/css/style.less
@@ -20,10 +20,10 @@ body.testing {
                 box-sizing: border-box;
             }
         }
+    }
 
-        &.sidebar-collapsed .main .content {
-            padding: 0 0 0 45px;
-        }
+    &.sidebar-collapsed > .wrapper .main .content {
+        padding: 0 0 0 45px;
     }
 }
 
